--- a/res/layout/gyro_plot_layout.xml
+++ b/res/layout/gyro_plot_layout.xml
@@ -15,15 +15,22 @@
         <!--title="A/P/R Levels"-->
         <!--/>-->
     <com.androidplot.xy.XYPlot
-        android:id="@+id/aprHistoryPlot"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:id="@+id/mainPlot"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="1"
-        android:layout_marginTop="10px"
-        android:layout_marginLeft="10px"
-        android:layout_marginRight="10px"
-        title="A/P/R History"
+        android:layout_marginTop="0px"
+        android:layout_marginBottom="0px"
+        android:layout_marginLeft="0px"
+        android:layout_marginRight="0px"
         />
+
+    <!--<Button-->
+        <!--android:id="@+id/myButton"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:text="My Button!"-->
+        <!--/>-->
 
     <!--<LinearLayout android:orientation="horizontal"-->
         <!--android:gravity="center"-->
