--- a/res/xml/line_point_formatter_with_plf1.xml
+++ b/res/xml/line_point_formatter_with_plf1.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--TODO: style all the lines from xml files like this.-->
 <config
     linePaint.strokeWidth="3dp"
     linePaint.color="#00AA00"
